tests/fail/yalınlık-hatası2.kip
Bir doğal-sayı
ya sıfır
ya da bir doğal-sayının ardılı
olabilir.

(bu doğal-sayıyı) bastırmak,
    bu sıfırsa, "sıfır" yazmaktır,
    değilse, "başka" yazmaktır.

(sıfırın ardılı) bastır.
